--- a/archives.html
+++ b/archives.html
@@ -5,22 +5,14 @@ title: Archives
 <section id="archives">
   <h2>{{ page.title }}</h2>
   {% for post in site.posts %}
-    {% if post.date|date:"%Y" != previous_post.date|date:"%Y" %}
-      {% assign year_changed = true %}
-    {% else %}
-       {% assign year_changed = false %}
-    {% endif %}
-      
-    {% if year_changed %}
-    {% if forloop.index != 1 %}
-    </ul>
-    {% endif %}
-    <h3>{{ post.date | date:"%Y" }}</h3>
-    <ul>
+    {% capture year %}{{ post.date | date:"%Y" }}{% endcapture %}
+    {% if current_year == null or current_year != year %}
+      {% assign current_year = year %}
+      </ul>
+      <h3>{{ year }}</h3>
+      <ul>
     {% endif %}
      
     <li>{{ post.date | date:"%b %d" }} - <a href="{{ post.url }}">{{ post.title }}</a></li>
-
-    {% assign previous_post = post %}
   {% endfor %}
 </section>
